--- a/examples/04-lists.html
+++ b/examples/04-lists.html
@@ -8,5 +8,12 @@
   </head>
 
   <body>
+
+<dl>
+  <dt>HTML</dt>
+  <dd>HyperText Markup Language</dd>
+  <dd>A language for web content</dd>
+</dl>
+
   </body>
 </html>
