--- a/examples/04-lists.html
+++ b/examples/04-lists.html
@@ -9,11 +9,36 @@
 
   <body>
 
-<dl>
-  <dt>HTML</dt>
-  <dd>HyperText Markup Language</dd>
-  <dd>A language for web content</dd>
-</dl>
+  <ul>
+    <li>Item 1</li>
+    <li>Item 2</li>
+    <li>Item 3</li>
+  </ul>
 
+  <ol type="i">
+    <li>Do this first</li>
+    <li>Do this next</li>
+    <li>Do this next</li>
+    <li>Do this next</li>
+    <li>Do this next</li>
+  </ol>
+
+  <dl>
+    <dt>Term</dt>
+    <dd>Description of the term</dd>
+    <dt>Term</dt>
+    <dd>Description of the term</dd>
+  </dl>
+
+<ul>
+  <li>Main item one
+    <ul>
+      <li>Sub-item A</li>
+      <li>Sub-item B</li>
+    </ul>
+  </li>
+  <li>Main item two</li>
+</ul>
+  
   </body>
 </html>
