--- a/examples/05-links.html
+++ b/examples/05-links.html
@@ -8,5 +8,10 @@
   </head>
 
   <body>
+    <h1 title="A header" id="heading1">Header</h1>
+
+    <a href="https://chatgpt.com" title="This will solve all your problems">ChatGPT</a>
+    
+    <a href="05-links-target.html" title="This will go to another page">A second page</a>
   </body>
 </html>
