--- a/examples/06-advanced-text.html
+++ b/examples/06-advanced-text.html
@@ -9,5 +9,27 @@
   </head>
 
   <body>
-  </body>
+<blockquote cite="https://www.biblegateway.com/passage/?search=gen%201%3A1&version=ESV">
+  <p>In the beginning, God created the heavens and the earth. The earth was without form and void, and darkness was over the face of the deep. And the Spirit of God was hovering over the face of the waters.And God said, “Let there be light,” and there was light.</p>
+</blockquote>
+<p><cite>Genesis 1:1-3</cite></p>
+
+<p>The <abbr title="World Wide Web Consortium">W3C</abbr> sets web standards.</p>
+<address>
+  <p>Anderson Univerity</p>
+  <p>1100 E. 5th St.</p>
+  <p>Anderson, IN</p>
+</address>
+
+<p>H<sub>2</sub>O is the chemical formula for water.</p>
+<p>In algebra, x<sup>2</sup> means x squared.</p>
+
+<p>To start the server, type <kbd>npm start</kbd> in your terminal.</p>
+<pre><code>
+function hello() {
+  console.log("Hello, World!");
+}
+</code></pre>
+<p>Output: <samp>Hello, World!</samp></p>
+</body>
 </html>
