--- a/examples/07-images.html
+++ b/examples/07-images.html
@@ -8,5 +8,23 @@
   </head>
 
   <body>
+    <figure>
+    <img 
+      src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Pin_tumbler_with_key.svg/576px-Pin_tumbler_with_key.svg.png"
+      alt="A pin tumbler lock with key"
+      height="200"
+    >
+    <figcaption><p>A key matched to a pin tumbler lock</p></figcaption>
+    </figure>
+
+    <picture>
+      <source
+        srcset="
+          https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/Saturn_during_Equinox.jpg/2560px-Saturn_during_Equinox.jpg 2560w,
+          https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/Saturn_during_Equinox.jpg/1024px-Saturn_during_Equinox.jpg 1024w,
+          https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/Saturn_during_Equinox.jpg/330px-Saturn_during_Equinox.jpg 330w"
+        sizes="(max-width: 330px) 330px, (max-width: 1024px) 1024px, 2560px">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/Saturn_during_Equinox.jpg/960px-Saturn_during_Equinox.jpg" alt="Saturn during equinox">
+    </picture>
   </body>
 </html>
