--- a/examples/10-multimedia.html
+++ b/examples/10-multimedia.html
@@ -9,5 +9,7 @@
 
   <body>
     <video src="https://upload.wikimedia.org/wikipedia/commons/transcoded/5/5a/Hubble_Maps_Jupiter_in_4k_Ultra_HD.webm/Hubble_Maps_Jupiter_in_4k_Ultra_HD.webm.240p.vp9.webm" controls></video>
+
+    <audio src="https://upload.wikimedia.org/wikipedia/commons/1/1e/HTTP_cookie.ogg" controls></audio>
   </body>
 </html>
