Update lecture and example

--- a/examples/11-tables.html
+++ b/examples/11-tables.html
@@ -8,5 +8,19 @@
   </head>
 
   <body>
+    <table>
+      <caption>List of Pokemon</caption>
+      <thead>
+        <tr><th>Name</th><th colspan=2>Types</th><th>HP</th></tr>
+      </thead>
+      <tbody>
+        <tr><td>Charmander</td><td colspan=2>Fire</td><td>60</td></tr>
+        <tr><td>Charmeleon</td><td colspan=2>Fire</td><td>80</td></tr>
+        <tr><td>Charizard</td><td>Fire</td><td>Flying</td><td>120</td></tr>
+      </tbody>
+      <tfoot>
+        <tr><td>Total</td><td></td><td>260</td></tr>
+      <tfoot>
+    </table>
   </body>
 </html>
