--- a/examples/11-tables.html
+++ b/examples/11-tables.html
@@ -19,7 +19,7 @@
         <tr><td>Charizard</td><td>Fire</td><td>Flying</td><td>120</td></tr>
       </tbody>
       <tfoot>
-        <tr><td>Total</td><td></td><td>260</td></tr>
+        <tr><td>Total</td><td colspan=2></td><td>260</td></tr>
       <tfoot>
     </table>
   </body>
