--- a/examples/11-tables.html
+++ b/examples/11-tables.html
@@ -4,23 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title></title>
+    <title>Table Example</title>
   </head>
 
   <body>
-    <table>
-      <caption>List of Pokemon</caption>
-      <thead>
-        <tr><th>Name</th><th colspan=2>Types</th><th>HP</th></tr>
-      </thead>
-      <tbody>
-        <tr><td>Charmander</td><td colspan=2>Fire</td><td>60</td></tr>
-        <tr><td>Charmeleon</td><td colspan=2>Fire</td><td>80</td></tr>
-        <tr><td>Charizard</td><td>Fire</td><td>Flying</td><td>120</td></tr>
-      </tbody>
-      <tfoot>
-        <tr><td>Total</td><td colspan=2></td><td>260</td></tr>
-      <tfoot>
-    </table>
   </body>
 </html>
