Update tabled example

--- a/examples/11-tables.html
+++ b/examples/11-tables.html
@@ -8,5 +8,29 @@
   </head>
 
   <body>
+    <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>HP</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Charmander</td>
+          <td>50</td>
+        </tr>
+        <tr>
+          <td>Charmeleon</td>
+          <td>80</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <td>Average</td>
+          <td>65</td>
+        </tr>
+      </tfoot>
+    </table>
   </body>
 </html>
