--- a/examples/12-forms.html
+++ b/examples/12-forms.html
@@ -8,5 +8,21 @@
   </head>
 
   <body>
+    <form>
+      <p>
+      <label for="first">First name:</label><input type="text" name="first" id="first" />
+      </p>
+      <p>
+      <label for="email">Email:</label><input type="email" name="email" id="email" />
+      </p>
+      <p>
+      <label for="password">Password:</label><input type="password" name="password" id="password" />
+      <p/>
+      <p>
+      <label>Can I have your data?<input type="checkbox" name="privacy" /></label>
+      <p>
+      <input type="submit" />
+
+    </form>
   </body>
 </html>
