Remove extra characters

--- a/examples/12-forms.html
+++ b/examples/12-forms.html
@@ -10,16 +10,16 @@
   <body>
     <form>
       <p>
-      <label for="first">First name:</label><input type="text" name="first" id="first" />
+      <label for="first">First name:</label><input type="text" name="first" id="first">
       </p>
       <p>
-      <label for="email">Email:</label><input type="email" name="email" id="email" />
+      <label for="email">Email:</label><input type="email" name="email" id="email">
       </p>
       <p>
-      <label for="password">Password:</label><input type="password" name="password" id="password" />
+      <label for="password">Password:</label><input type="password" name="password" id="password">
       <p/>
       <p>
-      <label>Can I have your data?<input type="checkbox" name="privacy" /></label>
+      <label>Can I have your data?<input type="checkbox" name="privacy"></label>
       <p>
       <input type="submit" />
 
