--- a/examples/13-forms.html
+++ b/examples/13-forms.html
@@ -9,6 +9,8 @@
 
   <body>
     <form>
+  <fieldset>
+    <legend>Contact Information</legend>
     <select id="continent" name="user_country">
       <optgroup label="North America">
         <option value="us">USA</option>
@@ -21,8 +23,10 @@
     </select>
     <input type="text" id="name" name="user_name" required>
     <label>Zip Code (e.g., 12345):
-    <input type="text" id="zip-code" name="zip_code" pattern="\d{5}" required></label>
+    <input type="number" id="zip-code" name="zip_code" pattern="\d{5}" required></label>
     <input type=submit name=submit value=Submit>
+  </fieldset>
+
     </form>
   </body>
 </html>
