--- a/examples/13-forms.html
+++ b/examples/13-forms.html
@@ -2,31 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Form Examples</title>
   </head>
 
   <body>
     <form>
-  <fieldset>
-    <legend>Contact Information</legend>
-    <select id="continent" name="user_country">
-      <optgroup label="North America">
-        <option value="us">USA</option>
-        <option value="ca">Canada</option>
-      </optgroup>
-      <optgroup label="Europe">
-        <option value="de">Germany</option>
-        <option value="fr">France</option>
-      </optgroup>
-    </select>
-    <input type="text" id="name" name="user_name" required>
-    <label>Zip Code (e.g., 12345):
-    <input type="number" id="zip-code" name="zip_code" pattern="\d{5}" required></label>
-    <input type=submit name=submit value=Submit>
-  </fieldset>
-
+      <fieldset>
+        <legend>Contact Information</legend>
+        <select id="continent" name="user_country">
+          <optgroup label="North America">
+            <option value="us">USA</option>
+            <option value="ca">Canada</option>
+          </optgroup>
+          <optgroup label="Europe">
+            <option value="de">Germany</option>
+            <option value="fr">France</option>
+          </optgroup>
+        </select>
+        <input type="text" id="name" name="user_name" required>
+        <label
+          >Zip Code (e.g., 12345):
+          <input
+            type="number"
+            id="zip-code"
+            name="zip_code"
+            pattern="\d{5}"
+            required
+        ></label>
+        <input type="submit" name="submit" value="Submit">
+      </fieldset>
     </form>
   </body>
 </html>
