--- a/examples/13-form-validation.html
+++ b/examples/13-form-validation.html
@@ -8,5 +8,30 @@
   </head>
 
   <body>
+    <form>
+      <fieldset>
+        <legend>Contact</legend>
+        <label>Email<input type="email" name="user_email" required minlength="3"></label>
+        <label for="zip-code">Zip Code (e.g., 12345):</label>
+        <input type="text" id="zip-code" name="zip_code" pattern="\d{5}" placeholder="12345..." required>
+        <label>Country
+        <select id="country" name="user_country">
+          <optgroup label="North America">
+            <option value="us">USA</option>
+            <option value="ca">Canada</option>
+          </optgroup>
+          <optgroup label="Europe">
+            <option value="de">Germany</option>
+            <option value="fr">France</option>
+          </optgroup>
+          </select>
+        </label>        
+      </fieldset>
+      <fieldset>
+        <legend>Message</legend>
+        <textarea name="message" rows="5" cols="80"></textarea>
+      </fieldset>
+      <input type="submit" value="Send">
+    </form>
   </body>
 </html>
