Update image URL

--- a/examples/16-selectors.html
+++ b/examples/16-selectors.html
@@ -77,7 +77,7 @@
         </p>
         <p>
           <img
-            src="/en-US/docs/Learn_web_development/Core/Styling_basics/Basic_selectors/selector.png"
+            src="https://developer.mozilla.org/en-US/docs/Learn_web_development/Core/Styling_basics/Basic_selectors/selector.png"
             alt="Some code with the h1 highlighted."
             width="471"
             height="218"
