--- a/examples/16-selectors.html
+++ b/examples/16-selectors.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title></title>
-    <style></style>
+    <link rel="stylesheet" href="16.css">
   </head>
 
   <body>
