--- a/examples/28-network.html
+++ b/examples/28-network.html
@@ -25,10 +25,14 @@
       })
 
     async function load() {
-      const response = await fetch('hello.html')
-      console.log(response)
-      const text = await response.text()
-      console.log(text)
+      try {
+        const response = await fetch('https://example.com/hello.html')
+        console.log(response)
+        const text = await response.text()
+        console.log(text)
+      } catch (error) {
+        console.log("BIG PROBLEMS!", error)
+      }
     }
 
     addEventListener('load', load)
