Clean up error handling

--- a/examples/28-network.html
+++ b/examples/28-network.html
@@ -31,7 +31,7 @@
         const text = await response.text()
         console.log(text)
       } catch (error) {
-        console.log("BIG PROBLEMS!", error)
+        console.error("ERROR: ", error)
       }
     }
 
