Use correct endpoint

--- a/examples/28-network.html
+++ b/examples/28-network.html
@@ -26,7 +26,7 @@
 
     async function load() {
       try {
-        const response = await fetch('https://example.com/hello.html')
+        const response = await fetch('hello.html')
         console.log(response)
         const text = await response.text()
         console.log(text)
